--- a/b2bdatalog/software.bib
+++ b/b2bdatalog/software.bib
@@ -197,3 +197,89 @@ title = {Using Datalog with Binary Decision Diagrams for Program Analysis},
 isbn = {978-3-540-29735-2},
 doi = {10.1007/11575467_8}
 }
+@article{souffle_btree,
+  title={A specialized B-tree for concurrent datalog evaluation},
+  author={Herbert Jordan and Pavle Subotic and David Zhao and Bernhard Scholz},
+  journal={Proceedings of the 24th Symposium on Principles and Practice of Parallel Programming},
+  year={2019}
+}
+@article{souffle,
+  title={On fast large-scale program analysis in Datalog},
+  author={Bernhard Scholz and Herbert Jordan and Pavle Subotic and Till Westmann},
+  journal={Proceedings of the 25th International Conference on Compiler Construction},
+  year={2016}
+}
+@inproceedings{rdf,
+  title={Rdf vocabulary description language 1.0 : Rdf schema},
+  author={Dan Brickley},
+  year={2004}
+}
+@inproceedings{rdfs,
+  title={Semantic Web for the Working Ontologist - Effective Modeling in RDFS and OWL, Second Edition},
+  author={Dean T. Allemang and James A. Hendler},
+  year={2011}
+}
+@article{incA,
+  title={Incrementalizing lattice-based program analyses in Datalog},
+  author={Tam{\'a}s Szab{\'o} and G{\'a}bor Bergmann and Sebastian Erdweg and Markus V{\"o}lter},
+  journal={Proceedings of the ACM on Programming Languages},
+  year={2018},
+  volume={2},
+  pages={1 - 29}
+}
+@article{timely,
+  title={Naiad: a timely dataflow system},
+  author={Derek Gordon Murray and Frank McSherry and Rebecca Isaacs and Michael Isard and Paul Barham and Mart{\'i}n Abadi},
+  journal={Proceedings of the Twenty-Fourth ACM Symposium on Operating Systems Principles},
+  year={2013}
+}
+@article{graspan,
+  title={Graspan: A Single-machine Disk-based Graph System for Interprocedural Static Analyses of Large-scale Systems Code},
+  author={Kai Wang and Aftab Hussain and Zhiqiang Zuo and Guoqing Harry Xu and Ardalan Amiri Sani},
+  journal={Proceedings of the Twenty-Second International Conference on Architectural Support for Programming Languages and Operating Systems},
+  year={2017}
+}
+@inproceedings{dred,
+  title={Incremental Maintenance of Recursive Views: A Survey},
+  author={Ashish Kumar Gupta and Inderpal Singh Mumick},
+  year={1999}
+}
+@inproceedings{pg,
+  title={PostgreSQL},
+  author={Lutz Fr{\"o}hlich},
+  year={2022}
+}
+@article{rustbel,
+  title={RustBelt meets relaxed memory},
+  author={Hoang-Hai Dang and Jacques-Henri Jourdan and Jan-Oliver Kaiser and Derek Dreyer},
+  journal={Proceedings of the ACM on Programming Languages},
+  year={2019},
+  volume={4},
+  pages={1 - 29}
+}
+@article{mysql,
+  title={MySQL},
+  author={Binildas A. Christudas},
+  journal={Practical Microservices Architectural Patterns},
+  year={2019}
+}
+@article{lsm,
+  title={The log-structured merge-tree (LSM-tree)},
+  author={Patrick E. O'Neil and Edward Y. C. Cheng and Dieter Gawlick and Elizabeth J. O'Neil},
+  journal={Acta Informatica},
+  year={1996},
+  volume={33},
+  pages={351-385}
+}
+@article{codd_1970,
+  title={A Relational Model for Large Shared Data Banks},
+  author={E. F. Codd},
+  journal={Communications of The ACM},
+  year={1970}
+}
+@inproceedings{ddlog,
+  title={Differential Datalog},
+  author={Leonid Ryzhyk and Mihai Budiu},
+  booktitle={Datalog},
+  year={2019}
+}
